--- a/WPF/Application/App.xaml
+++ b/WPF/Application/App.xaml
@@ -1,6 +1,8 @@
-﻿<Application x:Class="WPF.App" StartupUri="View/WindowMain.xaml"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+﻿<Application xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:WPF">
+             xmlns:local="clr-namespace:CEA.Application"
+             StartupUri="View/WindowMain.xaml"
+             x:Class="CEA.Application.App"
+             >
     <Application.Resources></Application.Resources>
 </Application>
