--- a/WPF/Application/Application.xaml
+++ b/WPF/Application/Application.xaml
@@ -1,3 +1,3 @@
 ﻿<Application xmlns="http://schemas.microsoft.com/netfx/2009/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             x:Class="Ara.MeritViewer.Application" />
+             x:Class="CEA.Application.Application" />
